# Education-Assistant-Backend

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  docker-compose.yml  main.py  requirements.txt
backend/core/: db.py  runtime_config.py  security.py
backend/models/: user.py
backend/routes/: __init__.py
backend/utils/: agentic_system_module.py  embedding_module.py  generation_module.py  otp_module.py  retrieval_module.py  title_generator_module.py
data/crawl/: full_description.csv  full_detail.csv  full_joined.csv  html_to_csv.py  join_full.py  knowledge_detail(active)txtl  knowledge_overview(active).csv  knowledge_overview(active).html  knowledge_overview_to_csv.py  make_full_detail.py  raw.csv  raw.html  raw2.csv  raw2.html  raw2_description.csv  raw2_description.html  raw3.csv  raw3.html  raw3_description.csv  raw3_description.html  raw4.csv  raw4.html  raw4_description.csv  raw4_description.html  raw5.csv  raw5.html  raw5_description.csv  raw5_description.html  raw6.csv  raw6.html  raw6_description.csv  raw6_description.html  raw7.csv  raw7.html  raw7_description.csv  raw7_description.html  raw_description.csv  raw_description.html  union_descriptions.py
