[project]
name = "education-assistant-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.0,<5.0",
    "faiss-cpu>=1.8,<2.0",
    "fastapi>=0.111,<1.0",
    "langchain>=0.2,<1.0",
    "langchain-community>=0.2,<1.0",
    "langchain-groq>=0.1,<1.0",
    "langgraph>=0.2,<1.0",
    "openai>=1.0,<2.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    "pydantic[email]>=2.0,<3.0",
    "pydub>=0.25,<1.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "python-multipart>=0.0.9,<1.0",
    "sentence-transformers>=2.7,<4.0",
    "speechrecognition>=3.10,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "typing-extensions>=4.7,<5.0",
    "uvicorn[standard]>=0.30,<1.0",
]
